Adicionar operaciones del juego